<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.garcesito.calculator.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20">

        <TextView
            android:id="@+id/tPantalla"
            android:layout_width="match_parent"
            android:layout_margin="5dp"
            android:layout_height="match_parent"
            android:hint="@string/resultado"
            android:inputType=""
            android:textColor="@color/darkblue"
            android:textColorHint="@color/gray"
            android:textSize="30sp" />/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="25"
        android:orientation="horizontal">
        <Button
            android:id="@+id/bSeven"
            android:layout_width="0dp"
            android:layout_weight="25"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:background="@color/red"
            android:text="@string/seven"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />
        <Button
            android:id="@+id/bEight"
            android:layout_width="0dp"
            android:layout_weight="25"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:background="@color/red"
            android:text="@string/eight"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />
        <Button
            android:id="@+id/bNine"
            android:layout_width="0dp"
            android:layout_weight="25"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:background="@color/red"
            android:text="@string/nine"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />
        <Button
            android:id="@+id/bPlus"
            android:layout_width="0dp"
            android:layout_weight="25"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:background="@color/red"
            android:text="@string/plus"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />
        
        
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="25"
        android:orientation="horizontal">
        <Button
            android:id="@+id/bFour"
            android:layout_width="0dp"
            android:layout_weight="25"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:background="@color/red"
            android:text="@string/four"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />
        <Button
            android:id="@+id/bFive"
            android:layout_width="0dp"
            android:layout_weight="25"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:background="@color/red"
            android:text="@string/five"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />
        <Button
            android:id="@+id/bSix"
            android:layout_width="0dp"
            android:layout_weight="25"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:background="@color/red"
            android:text="@string/six"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />
        <Button
            android:id="@+id/bMinus"
            android:layout_width="0dp"
            android:layout_weight="25"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:background="@color/red"
            android:text="@string/minus"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="25"
        android:orientation="horizontal">
        <Button
            android:id="@+id/bOne"
            android:layout_width="0dp"
            android:layout_weight="25"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:background="@color/red"
            android:text="@string/one"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />
        <Button
            android:id="@+id/bTwo"
            android:layout_width="0dp"
            android:layout_weight="25"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:background="@color/red"
            android:text="@string/two"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />
        <Button
            android:id="@+id/bThree"
            android:layout_width="0dp"
            android:layout_weight="25"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:background="@color/red"
            android:text="@string/three"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />
        <Button
            android:id="@+id/bMultiply"
            android:layout_width="0dp"
            android:layout_weight="25"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:background="@color/red"
            android:text="@string/multiply"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="25"
        android:orientation="horizontal">
        <Button
            android:id="@+id/bDot"
            android:layout_width="0dp"
            android:layout_weight="25"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:background="@color/red"
            android:text="@string/dot"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />
        <Button
            android:id="@+id/bZero"
            android:layout_width="0dp"
            android:layout_weight="25"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:background="@color/red"
            android:text="@string/zero"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />
        <Button
            android:id="@+id/bEqual"
            android:layout_width="0dp"
            android:layout_weight="25"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:background="@color/red"
            android:text="@string/equal"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />
        <Button
            android:id="@+id/bDivide"
            android:layout_width="0dp"
            android:layout_weight="25"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:background="@color/red"
            android:text="@string/divide"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />


    </LinearLayout>




</LinearLayout>
